--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
                             <th>Name</th>
                             <th>Visit site</th>
                             <th>update</th>
+                            <th>Delete</th>
                         </tr>
                     </thead>
                     <tbody class="tablecontent">
                         <tr>
                             <td></td>
-                            <td><a href=""><button class=" bg-danger py-2 px-3 rounded ">visit</button></a></td>
+                            <td><a href=""><button class=" sbvisit py-2 px-3 rounded ">visit</button></a></td>
                             <td><button class="btnupdate rounded py-2 px-3" onclick="update(index); updateindex(index)">update</button></td>
+                            <td><button class=" bg-danger rounded py-2 px-3" onclick="Delete(index)">update</button></td>
                             
                         </tr>
 
